--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 </div>
             </div>
         </section>
-
+ <div id="dg-widget-container" class="sitecontainer">
+        <a class="dg-widget-link" href="http://2gis.kz/semey/firm/70000001052354041/center/80.26675701141359,50.43232003285974/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть на карте </a><div class="dg-widget-link"><a href="http://2gis.kz/semey/firm/70000001052354041/photos/70000001052354041/center/80.26675701141359,50.43232003285974/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=photos">Фотографии компании</a></div><div class="dg-widget-link"><a href="http://2gis.kz/semey/center/80.266823,50.430441/zoom/16/routeTab/rsType/bus/to/80.266823,50.430441╎Кен сарай, ресторан?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти проезд до Кен сарай, ресторан</a></div><script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script><script charset="utf-8">new DGWidgetLoader({"width":500,"height":400,"borderColor":"#a3a3a3","pos":{"lat":50.43232003285974,"lon":80.26675701141359,"zoom":16},"opt":{"city":"semey"},"org":[{"id":"70000001052354041"}]});</script><noscript style="color:#c00;font-size:16px;font-weight:bold;">Виджет карты использует JavaScript. Включите его в настройках вашего браузера.</noscript>
+</div>
         <section class="guest-form-section section-padding">
             <div class="container">
                 <div class="guest-card">
@@ -100,4 +102,5 @@
 </body>
 
 </html>
+
 
