--- a/index.html
+++ b/index.html
@@ -64,6 +64,51 @@
                         <h3>Уақыты:</h3>
                         <p>14 маусым, 2026 жыл</p>
                         <p>Сағат 17:00</p>
+                               <section class="calendar-section">
+    <div class="calendar-container">
+        <h2 class="calendar-title">Маусым 2026</h2>
+        <div class="calendar-grid">
+            <div class="day-name">Дс</div>
+            <div class="day-name">Сс</div>
+            <div class="day-name">Ср</div>
+            <div class="day-name">Бс</div>
+            <div class="day-name">Жм</div>
+            <div class="day-name">Сб</div>
+            <div class="day-name">Жс</div>
+
+            <div class="calendar-day">1</div>
+            <div class="calendar-day">2</div>
+            <div class="calendar-day">3</div>
+            <div class="calendar-day">4</div>
+            <div class="calendar-day">5</div>
+            <div class="calendar-day">6</div>
+            <div class="calendar-day">7</div>
+            <div class="calendar-day">8</div>
+            <div class="calendar-day">9</div>
+            <div class="calendar-day">10</div>
+            <div class="calendar-day">11</div>
+            <div class="calendar-day">12</div>
+            <div class="calendar-day">13</div>
+            <div class="calendar-day wedding-day">14</div>
+            <div class="calendar-day">15</div>
+            <div class="calendar-day">16</div>
+            <div class="calendar-day">17</div>
+            <div class="calendar-day">18</div>
+            <div class="calendar-day">19</div>
+            <div class="calendar-day">20</div>
+            <div class="calendar-day">21</div>
+            <div class="calendar-day">22</div>
+            <div class="calendar-day">23</div>
+            <div class="calendar-day">24</div>
+            <div class="calendar-day">25</div>
+            <div class="calendar-day">26</div>
+            <div class="calendar-day">27</div>
+            <div class="calendar-day">28</div>
+            <div class="calendar-day">29</div>
+            <div class="calendar-day">30</div>
+        </div>
+    </div>
+</section>
                     </div>
                     <div class="info-card">
                         <h3>Мекенжайы:</h3>
@@ -102,5 +147,6 @@
 </body>
 
 </html>
+
 
 
